Fixes. Vertical align for textarea label. Correct comet unsubscription

--- a/core/src/main/web/outputdisplay/bko-plot/bko-easyform.css
+++ b/core/src/main/web/outputdisplay/bko-plot/bko-easyform.css
@@ -3,7 +3,8 @@
     min-width: 100px;
 }
 .text-area-label {
-    margin: 0 10px;
+    vertical-align: top;
+    margin: 5px 10px;
     min-width: 100px;
 }
 .check-box-label {
